--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "type": "flarum-extension",
     "license": "MIT",
     "require": {
-        "flarum/core": ">=0.1.0-beta.11 <0.1.0-beta.13",
+        "flarum/core": ">=0.1.0-beta.11 <0.1.0-beta.14",
         "guzzlehttp/guzzle": "^6.0"
     },
     "authors": [
@@ -30,6 +30,9 @@
                 "backgroundColor": "#684ba6",
                 "color": "#fff"
             }
+        },
+        "flagrow": {
+            "discuss": "https://discuss.flarum.org/d/23079"
         }
     }
 }
